<resources>
    <string name="app_name">Cards</string>
    <string name="answer_button_text">Check answer</string>
    <string name="easy_button_title">Easy</string>
    <string name="doubt_button_title">Doubt</string>
    <string name="hard_button_title">Hard</string>
    <string name="cards_left_format">%d cards left</string>
    <string name="subtitle_text">Touch to study</string>
    <string name="study_button">Study</string>
    <string name="no_more_cards">No more cards to show</string>
    <string name="studyButtonText">Study</string>
    <string name="id_text">ID: %s</string>
    <string name="id_text_deck">ID: %d</string>
    <string name="question_textView">Question</string>
    <string name="answer_textView">Answer</string>
    <string name="accept_card_edit_button_title">Accept</string>
    <string name="cancel_card_edit_button_title">Cancel</string>
    <string name="card_question_hint">Type the question here</string>
    <string name="card_answer_hint">Type the answer here</string>
    <string name="create_card_text">Card added correctly</string>
    <string name="decks_nav_menu_title">Mazes</string>
    <string name="study_nav_menu_title">Study</string>
    <string name="statistics_nav_menu_title">Statistics</string>
    <string name="email">sergio.garcia02@estudiante.uam.es</string>
    <string name="accept_button_info">Accept</string>
    <string name="about_nav_menu_title">About</string>
    <string name="hide_info_text">More information</string>
    <string name="deck_name_hint">Type a name</string>
    <string name="create_deck_text">Deck added correctly</string>
    <string name="update_deck_text">Deck updated correctly</string>
    <string name="remove_card_text">Card removed correctly</string>
    <string name="remove_deck_text">Deck removed correctly</string>
    <string name="remove_card_button_text">Remove card</string>
    <string name="remove_deck_button_text">Remove deck</string>
    <string name="info_app_about">The Cards application has been developed for the subject Development of Applications for mobile devices, the objective of which is to perform spaced learning with cards. You can add decks of cards and specific cards for each deck and study them.</string>
    <string name="app_version">Version 0.5</string>
    <string name="cards_no_more_cards">No more cards to show</string>
    <string name="no_statistics_text">No stats to show</string>
    <string name="number_of_cards_stats">Number of cards: %s</string>
    <string name="number_of_decks_stats">Number of decks: %s</string>
    <string name="easiness_stats">Average difficulty: %s</string>
    <string name="update_card_text">Card updated correctly</string>
    <string name="edit_deck">Edit</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="decks_header">Decks</string>
    <string name="max_number_cards">Maximum number of cards</string>
    <string name="board_summary_off">Board unavailable</string>
    <string name="board_summary_on">Board available</string>
    <string name="board_title">Show board</string>
    <string name="stats_deck">Statistics</string>
    <string name="card_stats_easiness">"Card Easiness "</string>
    <string name="upload_firebase">"Upload"</string>
    <string name="upload_firebase_text">Cards uploaded correctly</string>
    <string name="desc_firebase_lockup"> Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="verify_email">Verify Email</string>
    <string name="reload">Reload</string>
    <string name="create_account">Create Account</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="download_firebase">Syncronize</string>
    <string name="firebase_settings">Firebase unavailable</string>
    <string name="firebase_switch_on">Firebase available</string>
    <string name="firebase_settings_title">Enable firebase</string>
    <string name="error_firebase_preference">Cannot syncronize with Firebase. Please enable Firebase from preferences</string>
    <string name="error_firebase_upload_preference">Cannot upload information from app. Please enable Firebase from settings</string>
    <string name="logout_success">Sign out correctly</string>
    <string name="firebase_settings_title_category">Firebase</string>
    <string name="upload_success">Upload the data correctly</string>
    <string name="download_success">Syncronize with Firebase correctly</string>


</resources>