<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/decks_header">
        <EditTextPreference
            app:key="max_number_cards"
            app:title="@string/max_number_cards"
            app:defaultValue="20" />
        <SwitchPreferenceCompat
            app:key="board"
            app:summaryOff="@string/board_summary_off"
            app:summaryOn="@string/board_summary_on"
            app:title="@string/board_title" />

        <Preference
            app:key="isLogged"
            app:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/firebase_settings_title_category">
    <SwitchPreferenceCompat
        app:key="firebase"
        app:summaryOff="@string/firebase_settings"
        app:summaryOn="@string/firebase_switch_on"
        app:title="@string/firebase_settings_title"
        app:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>