<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/firebase_group">
        <item
            android:id="@+id/upload_firebase"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/upload_firebase"
            app:showAsAction="always|withText" />

        <item
            android:id="@+id/download_firebase"
            android:icon="@android:drawable/stat_notify_sync"
            android:title="@string/download_firebase"
            app:showAsAction="always|withText"/>

        <item
            android:id="@+id/settings_firebase"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings"
            app:showAsAction="ifRoom|withText" />

        <item
            android:id="@+id/log_out_firebase"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/log_out"
            app:showAsAction="always|withText" />
    </group>
</menu>