<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="card"
            type="com.example.encode.Card" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:text="@string/question_text"
        tools:text="Texto para el entorno"/>

    <View
        android:id="@+id/separator"
        android:layout_below="@id/question_text_view"
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="1dp"
        android:visibility="@{card.answered ? View.VISIBLE: View.INVISIBLE}"
        android:background="@android:color/darker_gray"/>


    <Button
        android:id="@+id/answer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer_text_view"
        android:layout_marginTop="38dp"
        android:text="@string/answer_button_text"
        />

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_text_view"
            android:layout_marginTop="37dp"
            android:gravity="center"
            android:text="@{card.answer}"
            android:textSize="20sp"
            android:visibility="@{card.answered ? View.VISIBLE: View.INVISIBLE}"
            tools:text="Respuesta para el entorno" />

        <LinearLayout
            android:id="@+id/difficulty_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:visibility="@{card.answered ? View.VISIBLE: View.INVISIBLE}">

            <Button
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_light"
                android:onClick="@{() -> card.update_easy()}"
                android:text="@string/hard_button_title"></Button>

            <Button
                android:id="@+id/doubt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_light"
                android:onClick="@{() -> card.update_doubt()}"
                android:text="@string/doubt_button_title"></Button>

            <Button
                android:id="@+id/hard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_light"
                android:onClick="@{() -> card.update_hard()}"
                android:text="@string/easy_button_title"></Button>

        </LinearLayout>

</RelativeLayout>
</layout>