<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="studyViewModel"
            type="com.uam.proyectocards.viewmodel.StudyViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="86dp"
            android:layout_marginTop="21dp"
            android:text="@{@string/cards_left_format(studyViewModel.cardsLeft)}"
            android:gravity="center"
            app:chipIcon="@drawable/ic_outline_bar_chart_24"
            tools:text="Numero de tarjetas restantes" />

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:text="@{studyViewModel.card.question}"
            tools:text="Texto para el entorno"/>

        <View
            android:id="@+id/separator"
            android:layout_below="@id/question_text_view"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="1dp"
            android:visibility="@{studyViewModel.card.answered ? View.VISIBLE: View.INVISIBLE}"
            android:background="@android:color/darker_gray"/>


        <Button
            android:id="@+id/answer_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer_text_view"
            android:layout_marginTop="38dp"
            android:text="@string/answer_button_text" />

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_text_view"
            android:layout_marginTop="37dp"
            android:gravity="center"
            android:text="@{studyViewModel.card.answer}"
            android:textSize="20sp"
            android:visibility="@{studyViewModel.card.answered ? View.VISIBLE: View.INVISIBLE}"
            tools:text="Respuesta para el entorno" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/difficulty_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:visibility="@{studyViewModel.card.answered ? View.VISIBLE: View.INVISIBLE}">

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/hard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/hard_button_title" />

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/doubt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueColor"
                android:text="@string/doubt_button_title" />

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/easy_button_title" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </RelativeLayout>
</layout>