<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="deck"
            type="com.uam.proyectocards.model.Deck"/>
    </data>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/id_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@{@string/id_text_deck(deck.id)}"
            tools:text="ID: 10" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_textView"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="47dp"
            android:hint="@string/deck_name_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_text"
                android:layout_marginTop="383dp"
                android:layout_marginEnd="2dp"
                android:baselineAligned="false"
                android:text="@{deck.name}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/deck_edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="268dp"
            android:gravity="center">

            <Button
                android:id="@+id/accept_deck_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_card_edit_button_title"
                android:textColor="@color/blueColor" />

            <Button
                android:id="@+id/cancel_deck_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_card_edit_button_title"
                android:textColor="@color/redColor" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


    </RelativeLayout>
</layout>